--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: paycheckr
-Title: What the Package Does (One Line, Title Case)
+Title: My Personal Finance Package
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Joe", "Shaw", , "first.last@example.com", role = c("aut", "cre"))
+Description: paycheckr is a personal package to help me do two things: 1) do some personal finance calculations and 2) learn how to create packages with R.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 URL: https://github.com/joeshaw824/paycheckr
 BugReports: https://github.com/joeshaw824/paycheckr/issues
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
