--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,5 @@ BugReports: https://github.com/joeshaw824/paycheckr/issues
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Imports: 
+    dplyr
